Basic hero section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Damian Demasi's Portfolio</title>
     </head>
-    <body></body>
+    <body>
+        <section class="hero">
+            <nav class="hero__nav"></nav>
+            <header class="hero__header">
+                <div class="hero__name">Damian Demasi</div>
+                <div class="hero__main-text">Web Developer</div>
+                <button class="hero__button">work@damiandemasi.com</button>
+            </header>
+            <section class="hero__latest">
+                <article class="hero__latest__project">
+                    <h2>Latest Project</h2>
+                    <div>Description of project</div>
+                    <button class="hero__button--read-more">Read more</button>
+                </article>
+                <article class="hero__latest__blog-post">
+                    <h2>Latest Blog Post</h2>
+                    <div>Description of blog post</div>
+                    <button class="hero__button--read-more">Read more</button>
+                </article>
+            </section>
+        </section>
+        <section class="projects"></section>
+        <section class="blog-posts"></section>
+        <section class="contact"></section>
+        <footer class="footer"></footer>
+    </body>
 </html>
