--- a/index.html
+++ b/index.html
@@ -4,25 +4,45 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./src/css/index.css" />
         <title>Damian Demasi's Portfolio</title>
     </head>
     <body>
         <section class="hero">
-            <nav class="hero__nav"></nav>
-            <header class="hero__header">
-                <div class="hero__name">Damian Demasi</div>
-                <div class="hero__main-text">Web Developer</div>
-                <button class="hero__button">work@damiandemasi.com</button>
-            </header>
+            <section class="hero__top-container">
+                <nav class="hero__nav">
+                    <div class="hero__nav__logos-container">
+                        <div class="hero__nav__logo">LinkedIn</div>
+                        <div class="hero__nav__logo">GitHub</div>
+                        <div class="hero__nav__logo">Twitter</div>
+                    </div>
+                    <div class="hero__nav__links-container">
+                        <div class="hero__nav__link">Projects</div>
+                        <div class="hero__nav__link">Blog Posts</div>
+                        <div class="hero__nav__link">About</div>
+                        <div class="hero__nav__link">Contact</div>
+                    </div>
+                </nav>
+                <header class="hero__header">
+                    <div class="hero__name">Damian Demasi</div>
+                    <div class="hero__main-text">Web Developer</div>
+                    <button class="hero__button">work@damiandemasi.com</button>
+                </header>
+            </section>
             <section class="hero__latest">
                 <article class="hero__latest__project">
-                    <h2>Latest Project</h2>
-                    <div>Description of project</div>
+                    <h2 class="hero__article-header">Latest Project</h2>
+                    <div class="hero__article-snippet">
+                        Description of project
+                    </div>
                     <button class="hero__button--read-more">Read more</button>
                 </article>
+                <div class="hero__article-dividing-line"></div>
                 <article class="hero__latest__blog-post">
-                    <h2>Latest Blog Post</h2>
-                    <div>Description of blog post</div>
+                    <h2 class="hero__article-header">Latest Blog Post</h2>
+                    <div class="hero__article-snippet">
+                        Description of blog post
+                    </div>
                     <button class="hero__button--read-more">Read more</button>
                 </article>
             </section>
