--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./src/css/index.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Bebas+Neue&display=swap"
+            rel="stylesheet"
+        />
         <title>Damian Demasi's Portfolio</title>
     </head>
     <body>
@@ -32,22 +38,57 @@
             <section class="hero__latest">
                 <article class="hero__latest__project">
                     <h2 class="hero__article-header">Latest Project</h2>
-                    <div class="hero__article-snippet">
-                        Description of project
+                    <h3 class="hero__article-header__title">
+                        This is a long title of a project to see how long titles
+                        behave on the screen
+                    </h3>
+                    <div class="hero__article-snippet article">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Placeat voluptas recusandae at repudiandae
+                            molestiae eius delectus fuga nobis tempora quaerat.
+                        </p>
+                        <h4 class="article__h4">
+                            Voluptatem explicabo nostrum mollitia
+                        </h4>
+                        <p>
+                            Ipsam numquam voluptatem quam ipsum! Voluptate
+                            sapiente, voluptas accusamus itaque iste fugit porro
+                            cupiditate at magni quidem ratione in temporibus qui
+                            sed consequatur vitae! Adipisci nam provident
+                            tenetur repudiandae necessitatibus perspiciatis
+                            ipsum quae totam enim. Assumenda aliquam soluta esse
+                            laboriosam omnis a optio eligendi fugiat error,
+                            voluptatibus cupiditate, vero commodi ea
+                            perferendis, quia natus aperiam consequuntur eum
+                            aliquid similique? Totam suscipit tenetur fugiat
+                            quae recusandae?
+                        </p>
                     </div>
-                    <button class="hero__button--read-more">Read more</button>
+                    <button class="hero__button--read-more">
+                        <span class="hero__button__button-text">Read more</span>
+                    </button>
                 </article>
                 <div class="hero__article-dividing-line"></div>
                 <article class="hero__latest__blog-post">
                     <h2 class="hero__article-header">Latest Blog Post</h2>
+                    <h3 class="hero__article-header__title">
+                        Title of Blog Post
+                    </h3>
                     <div class="hero__article-snippet">
                         Description of blog post
                     </div>
-                    <button class="hero__button--read-more">Read more</button>
+                    <button class="hero__button--read-more">
+                        <span class="hero__button__button-text">Read more</span>
+                    </button>
                 </article>
             </section>
         </section>
-        <section class="projects"></section>
+        <section class="projects">
+            <header class="projects__header">
+                <h2>Projects</h2>
+            </header>
+        </section>
         <section class="blog-posts"></section>
         <section class="contact"></section>
         <footer class="footer"></footer>
