--- a/index.html
+++ b/index.html
@@ -85,11 +85,231 @@
             </section>
         </section>
         <section class="projects">
-            <header class="projects__header">
-                <h2>Projects</h2>
-            </header>
+            <div class="projects__header">
+                <div class="projects__header__big-header-text-container">
+                    <h2 class="projects__header__big-header-text">Project</h2>
+                </div>
+            </div>
+            <article class="projects__article-container">
+                <div class="projects__highlight">
+                    <img
+                        src="./src/img/video-placeholder-600x300.png"
+                        alt="Video of project"
+                    />
+                    <div class="projects__highlight__buttons">
+                        <button class="projects__button">
+                            <span class="projects__button__button-text"
+                                >GitHub Repository</span
+                            >
+                        </button>
+                        <button class="projects__button">
+                            <span class="projects__button__button-text"
+                                >See it live</span
+                            >
+                        </button>
+                    </div>
+                    <div class="projects__highlight__horizontal-line"></div>
+                    <div class="projects__highlight__technologies article">
+                        <h3 class="projects__highlight__technologies__title">
+                            Technologies
+                        </h3>
+                        <p>
+                            Consectetur adipiscing elit. Maecenas euismod, velit
+                            ac consequat maximus, erat lacus tincidunt magna, et
+                            laoreet felis magna sed urna. Vestibulum sed
+                            vestibulum libero, bibendum accumsan nisi. Duis
+                            mattis felis vitae pellentesque ultricies. Phasellus
+                            elementum feugiat metus vel fermentum. Aenean vitae
+                            nisl vel metus tincidunt rutrum. Nunc egestas, quam
+                            vitae porttitor lacinia, nisi purus pharetra ipsum,
+                            cursus iaculis neque massa vel dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="projects__description article">
+                    <h3 class="projects__description__title">
+                        COVID-19 Dashboard
+                    </h3>
+                    <h4>Lorem ipsum dolor sit amet</h4>
+                    <p>
+                        Consectetur adipiscing elit. Maecenas euismod, velit ac
+                        consequat maximus, erat lacus tincidunt magna, et
+                        laoreet felis magna sed urna. Vestibulum sed vestibulum
+                        libero, bibendum accumsan nisi. Duis mattis felis vitae
+                        pellentesque ultricies. Phasellus elementum feugiat
+                        metus vel fermentum. Aenean vitae nisl vel metus
+                        tincidunt rutrum. Nunc egestas, quam vitae porttitor
+                        lacinia, nisi purus pharetra ipsum, cursus iaculis neque
+                        massa vel dolor.
+                    </p>
+                    <p>
+                        Aliquam erat volutpat. In sapien justo, vehicula at
+                        tortor a, maximus porta lorem. In hac habitasse platea
+                        dictumst. Donec mollis elit nulla, sed pulvinar purus
+                        eleifend vel. Maecenas iaculis nulla ac magna feugiat,
+                        et ultricies mi gravida. Lorem ipsum dolor sit amet Nam
+                        at nisl sollicitudin, laoreet neque sit amet, tempor
+                        lectus.
+                    </p>
+
+                    <h4>Curabitur eget risus vitae ante consequat commodo</h4>
+                    <p>
+                        Aliquam at faucibus leo, suscipit ultricies metus.
+                        Vivamus congue non nunc nec lacinia. In sed sollicitudin
+                        massa. Phasellus ipsum diam, ornare vel metus vitae,
+                        aliquet ornare nulla. Aliquam eleifend nunc ante, vel
+                        lacinia magna dignissim eu. Fusce in nisl nec augue
+                        volutpat dignissim sed vitae leo. Donec aliquam risus
+                        non eros viverra, ac consectetur diam ornare. Fusce ut
+                        efficitur lorem. Etiam efficitur sed mauris sit amet
+                        convallis. Nunc quis magna rhoncus, eleifend mauris eu,
+                        eleifend tellus. Ut congue purus sit amet metus
+                        sollicitudin, et fermentum leo imperdiet.
+                    </p>
+                    <button class="projects__description__button">
+                        <span class="projects__description__button-text"
+                            >Read more</span
+                        >
+                    </button>
+                </div>
+            </article>
+            <div class="projects__header">
+                <div class="projects__header__big-header-text-container">
+                    <h2 class="projects__header__big-header-text">Project</h2>
+                </div>
+            </div>
+            <article class="projects__article-container">
+                <div class="projects__highlight">
+                    <img
+                        src="./src/img/video-placeholder-600x300.png"
+                        alt="Video of project"
+                    />
+                    <div class="projects__highlight__buttons">
+                        <button class="projects__button">
+                            <span class="projects__button__button-text"
+                                >GitHub Repository</span
+                            >
+                        </button>
+                        <button class="projects__button">
+                            <span class="projects__button__button-text"
+                                >See it live</span
+                            >
+                        </button>
+                    </div>
+                    <div class="projects__highlight__horizontal-line"></div>
+                    <div class="projects__highlight__technologies article">
+                        <h3 class="projects__highlight__technologies__title">
+                            Technologies
+                        </h3>
+                        <p>
+                            Consectetur adipiscing elit. Maecenas euismod, velit
+                            ac consequat maximus, erat lacus tincidunt magna, et
+                            laoreet felis magna sed urna. Vestibulum sed
+                            vestibulum libero, bibendum accumsan nisi. Duis
+                            mattis felis vitae pellentesque ultricies. Phasellus
+                            elementum feugiat metus vel fermentum. Aenean vitae
+                            nisl vel metus tincidunt rutrum. Nunc egestas, quam
+                            vitae porttitor lacinia, nisi purus pharetra ipsum,
+                            cursus iaculis neque massa vel dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="projects__description article">
+                    <h3 class="projects__description__title">To-Do app</h3>
+                    <h4>Lorem ipsum dolor sit amet</h4>
+                    <p>
+                        Consectetur adipiscing elit. Maecenas euismod, velit ac
+                        consequat maximus, erat lacus tincidunt magna, et
+                        laoreet felis magna sed urna. Vestibulum sed vestibulum
+                        libero, bibendum accumsan nisi. Duis mattis felis vitae
+                        pellentesque ultricies. Phasellus elementum feugiat
+                        metus vel fermentum. Aenean vitae nisl vel metus
+                        tincidunt rutrum. Nunc egestas, quam vitae porttitor
+                        lacinia, nisi purus pharetra ipsum, cursus iaculis neque
+                        massa vel dolor.
+                    </p>
+                    <p>
+                        Aliquam erat volutpat. In sapien justo, vehicula at
+                        tortor a, maximus porta lorem. In hac habitasse platea
+                        dictumst. Donec mollis elit nulla, sed pulvinar purus
+                        eleifend vel. Maecenas iaculis nulla ac magna feugiat,
+                        et ultricies mi gravida. Lorem ipsum dolor sit amet Nam
+                        at nisl sollicitudin, laoreet neque sit amet, tempor
+                        lectus.
+                    </p>
+
+                    <h4>Curabitur eget risus vitae ante consequat commodo</h4>
+                    <p>
+                        Aliquam at faucibus leo, suscipit ultricies metus.
+                        Vivamus congue non nunc nec lacinia. In sed sollicitudin
+                        massa. Phasellus ipsum diam, ornare vel metus vitae,
+                        aliquet ornare nulla. Aliquam eleifend nunc ante, vel
+                        lacinia magna dignissim eu. Fusce in nisl nec augue
+                        volutpat dignissim sed vitae leo. Donec aliquam risus
+                        non eros viverra, ac consectetur diam ornare. Fusce ut
+                        efficitur lorem. Etiam efficitur sed mauris sit amet
+                        convallis. Nunc quis magna rhoncus, eleifend mauris eu,
+                        eleifend tellus. Ut congue purus sit amet metus
+                        sollicitudin, et fermentum leo imperdiet.
+                    </p>
+                    <button class="projects__description__button">
+                        <span class="projects__description__button-text"
+                            >Read more</span
+                        >
+                    </button>
+                </div>
+            </article>
         </section>
-        <section class="blog-posts"></section>
+        <section class="blog-posts">
+            <div class="blog-posts__header">
+                <div class="blog-posts__header__big-header-text-container">
+                    <h2 class="blog-posts__header__big-header-text">
+                        Blog posts
+                    </h2>
+                </div>
+            </div>
+            <div class="blog-posts__container">
+                <article class="blog-posts__post">
+                    <header class="blog-posts__post__header">
+                        MVC and the Publish and Subscription desing pattern
+                    </header>
+                    <div class="blog-posts__post__article article">
+                        Consectetur adipiscing elit. Maecenas euismod, velit ac
+                        consequat maximus, erat lacus tincidunt magna, et
+                        laoreet felis magna sed urna. Vestibulum sed vestibulum
+                        libero, bibendum accumsan nisi. Duis mattis felis vitae
+                        pellentesque ultricies. Phasellus elementum feugiat
+                        metus vel fermentum. Aenean vitae nisl vel metus
+                        tincidunt rutrum. Nunc egestas, quam vitae porttitor
+                        lacinia, nisi purus pharetra ipsum, cursus iaculis neque
+                        massa vel dolor. Aliquam erat volutpat.
+                    </div>
+                    <div class="blog-posts__post__read-it-on">
+                        <p>Read it on</p>
+                        <button class="blog-posts__post__button">
+                            <span class="blog-posts__post__button-text"
+                                >Dev.to</span
+                            >
+                        </button>
+                        <button class="blog-posts__post__button">
+                            <span class="blog-posts__post__button-text"
+                                >Hashnode</span
+                            >
+                        </button>
+                        <button class="blog-posts__post__button">
+                            <span class="blog-posts__post__button-text"
+                                >Medium</span
+                            >
+                        </button>
+                        <button class="blog-posts__post__button">
+                            <span class="blog-posts__post__button-text"
+                                >Blog</span
+                            >
+                        </button>
+                    </div>
+                </article>
+            </div>
+        </section>
         <section class="contact"></section>
         <footer class="footer"></footer>
     </body>
