--- a/index.html
+++ b/index.html
@@ -269,48 +269,246 @@
                 </div>
             </div>
             <div class="blog-posts__container">
-                <article class="blog-posts__post">
-                    <header class="blog-posts__post__header">
-                        MVC and the Publish and Subscription desing pattern
-                    </header>
-                    <div class="blog-posts__post__article article">
-                        Consectetur adipiscing elit. Maecenas euismod, velit ac
-                        consequat maximus, erat lacus tincidunt magna, et
-                        laoreet felis magna sed urna. Vestibulum sed vestibulum
-                        libero, bibendum accumsan nisi. Duis mattis felis vitae
-                        pellentesque ultricies. Phasellus elementum feugiat
-                        metus vel fermentum. Aenean vitae nisl vel metus
-                        tincidunt rutrum. Nunc egestas, quam vitae porttitor
-                        lacinia, nisi purus pharetra ipsum, cursus iaculis neque
-                        massa vel dolor. Aliquam erat volutpat.
-                    </div>
-                    <div class="blog-posts__post__read-it-on">
-                        <p>Read it on</p>
-                        <button class="blog-posts__post__button">
-                            <span class="blog-posts__post__button-text"
-                                >Dev.to</span
+                <div class="blog-posts__nav-arrow">
+                    <img src="./src/img/white-arrow.png" alt="Left" />
+                </div>
+                <div class="blog-posts__body">
+                    <article class="blog-posts__body__post">
+                        <header class="blog-posts__body__post__header">
+                            MVC and the Publish and Subscription desing pattern
+                        </header>
+                        <div class="blog-posts__body__post__article article">
+                            <p>
+                                Consectetur adipiscing elit. Maecenas euismod,
+                                velit ac consequat maximus, erat lacus tincidunt
+                                magna, et laoreet felis magna sed urna.
+                                Vestibulum sed vestibulum libero, bibendum
+                                accumsan nisi. Duis mattis felis vitae
+                                pellentesque ultricies. Phasellus elementum
+                                feugiat metus vel fermentum. Aenean vitae nisl
+                                vel metus tincidunt rutrum. Nunc egestas, quam
+                                vitae porttitor lacinia, nisi purus pharetra
+                                ipsum, cursus iaculis neque massa vel.
+                            </p>
+                        </div>
+                        <div class="blog-posts__body__post__read-it-on">
+                            <p
+                                class="
+                                    blog-posts__body__post__read-it-on__title
+                                "
                             >
-                        </button>
-                        <button class="blog-posts__post__button">
-                            <span class="blog-posts__post__button-text"
-                                >Hashnode</span
+                                Read it on
+                            </p>
+                            <div
+                                class="
+                                    blog-posts__body__post__buttons-container
+                                "
                             >
-                        </button>
-                        <button class="blog-posts__post__button">
-                            <span class="blog-posts__post__button-text"
-                                >Medium</span
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Dev.to</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Hashnode</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Medium</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Blog</span
+                                    >
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog-posts__body__post">
+                        <header class="blog-posts__body__post__header">
+                            MVC and the Publish and Subscription desing pattern
+                        </header>
+                        <div class="blog-posts__body__post__article article">
+                            <p>
+                                Consectetur adipiscing elit. Maecenas euismod,
+                                velit ac consequat maximus, erat lacus tincidunt
+                                magna, et laoreet felis magna sed urna.
+                                Vestibulum sed vestibulum libero, bibendum
+                                accumsan nisi. Duis mattis felis vitae
+                                pellentesque ultricies. Phasellus elementum
+                                feugiat metus vel fermentum. Aenean vitae nisl
+                                vel metus tincidunt rutrum. Nunc egestas, quam
+                                vitae porttitor lacinia, nisi purus pharetra
+                                ipsum, cursus iaculis neque massa vel.
+                            </p>
+                        </div>
+                        <div class="blog-posts__body__post__read-it-on">
+                            <p
+                                class="
+                                    blog-posts__body__post__read-it-on__title
+                                "
                             >
-                        </button>
-                        <button class="blog-posts__post__button">
-                            <span class="blog-posts__post__button-text"
-                                >Blog</span
+                                Read it on
+                            </p>
+                            <div
+                                class="
+                                    blog-posts__body__post__buttons-container
+                                "
                             >
-                        </button>
-                    </div>
-                </article>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Dev.to</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Hashnode</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Medium</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Blog</span
+                                    >
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog-posts__body__post">
+                        <header class="blog-posts__body__post__header">
+                            MVC and the Publish and Subscription desing pattern
+                        </header>
+                        <div class="blog-posts__body__post__article article">
+                            <p>
+                                Consectetur adipiscing elit. Maecenas euismod,
+                                velit ac consequat maximus, erat lacus tincidunt
+                                magna, et laoreet felis magna sed urna.
+                                Vestibulum sed vestibulum libero, bibendum
+                                accumsan nisi. Duis mattis felis vitae
+                                pellentesque ultricies. Phasellus elementum
+                                feugiat metus vel fermentum. Aenean vitae nisl
+                                vel metus tincidunt rutrum. Nunc egestas, quam
+                                vitae porttitor lacinia, nisi purus pharetra
+                                ipsum, cursus iaculis neque massa vel.
+                            </p>
+                        </div>
+                        <div class="blog-posts__body__post__read-it-on">
+                            <p
+                                class="
+                                    blog-posts__body__post__read-it-on__title
+                                "
+                            >
+                                Read it on
+                            </p>
+                            <div
+                                class="
+                                    blog-posts__body__post__buttons-container
+                                "
+                            >
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Dev.to</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Hashnode</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Medium</span
+                                    >
+                                </button>
+                                <button class="blog-posts__body__post__button">
+                                    <span
+                                        class="
+                                            blog-posts__body__post__button-text
+                                        "
+                                        >Blog</span
+                                    >
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <div class="blog-posts__nav-arrow">
+                    <img src="./src/img/white-arrow.png" alt="Right" />
+                </div>
             </div>
+
+            <div class="blog-posts__dividing-line"></div>
+            <article class="blog-posts__footer-article">
+                <h2 class="blog-posts__footer-article-header">Why to blog?</h2>
+                <h3 class="blog-posts__footer-article-header__title">
+                    The best way to learn is to teach
+                </h3>
+                <div class="blog-posts__footer-article-snippet article">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Placeat voluptas recusandae at repudiandae molestiae
+                        eius delectus fuga nobis tempora quaerat.
+                    </p>
+                    <h4 class="article__h4">
+                        Voluptatem explicabo nostrum mollitia
+                    </h4>
+                    <p>
+                        Ipsam numquam voluptatem quam ipsum! Voluptate sapiente,
+                        voluptas accusamus itaque iste fugit porro cupiditate at
+                        magni quidem ratione in temporibus qui sed consequatur
+                        vitae! Adipisci nam provident tenetur repudiandae
+                        necessitatibus perspiciatis ipsum quae totam enim.
+                        Assumenda aliquam soluta esse laboriosam omnis a optio
+                        eligendi fugiat error, voluptatibus cupiditate, vero
+                        commodi ea perferendis, quia natus aperiam consequuntur
+                        eum aliquid similique? Totam suscipit tenetur fugiat
+                        quae recusandae?
+                    </p>
+                </div>
+            </article>
         </section>
-        <section class="contact"></section>
-        <footer class="footer"></footer>
+        <section class="about">About</section>
+        <section class="contact">Contact</section>
+        <footer class="footer">Footer</footer>
     </body>
 </html>
