About section - part 1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </section>
             <section class="hero__latest">
                 <article class="hero__latest__project">
-                    <h2 class="hero__article-header">Latest Project</h2>
+                    <h2 class="hero__article-header">Featured Project</h2>
                     <h3 class="hero__article-header__title">
                         This is a long title of a project to see how long titles
                         behave on the screen
@@ -71,12 +71,33 @@
                 </article>
                 <div class="hero__article-dividing-line"></div>
                 <article class="hero__latest__blog-post">
-                    <h2 class="hero__article-header">Latest Blog Post</h2>
+                    <h2 class="hero__article-header">Featured Blog Post</h2>
                     <h3 class="hero__article-header__title">
-                        Title of Blog Post
+                        Perferendis, quia natus aperiam consequuntur
                     </h3>
-                    <div class="hero__article-snippet">
-                        Description of blog post
+                    <div class="hero__article-snippet article">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Placeat voluptas recusandae at repudiandae
+                            molestiae eius delectus fuga nobis tempora quaerat.
+                            Assumenda aliquam soluta esse laboriosam omnis a
+                            optio eligendi fugiat error, voluptatibus
+                            cupiditate, vero commodi ea perferendis, quia natus
+                            aperiam consequuntur eum aliquid similique? Totam
+                            suscipit tenetur fugiat quae recusandae?
+                        </p>
+                        <h4 class="article__h4">
+                            Cupiditate at magni quidem ratione in temporibus qui
+                            sed consequatur vitae!
+                        </h4>
+                        <p>
+                            Ipsam numquam voluptatem quam ipsum! Voluptate
+                            sapiente, voluptas accusamus itaque iste fugit porro
+                            cupiditate at magni quidem ratione in temporibus qui
+                            sed consequatur vitae! Adipisci nam provident
+                            tenetur repudiandae necessitatibus perspiciatis
+                            ipsum quae totam enim.
+                        </p>
                     </div>
                     <button class="hero__button--read-more">
                         <span class="hero__button__button-text">Read more</span>
@@ -507,7 +528,111 @@
                 </div>
             </article>
         </section>
-        <section class="about">About</section>
+        <section class="about">
+            <div class="about__header">
+                <div class="about__header__big-header-text-container">
+                    <h2 class="about__header__big-header-text">About</h2>
+                </div>
+            </div>
+            <div class="about__article-container__background">
+                <article class="about__article-container">
+                    <section class="about__highlight__container">
+                        <div class="about__highlight__picture">
+                            <div class="about__highlight__picture__frame1">
+                                <div class="about__highlight__picture__frame2">
+                                    <img
+                                        class="about__highlight__picture__image"
+                                        src="./src/img/profile-picture.jpeg"
+                                        alt="Damian Demasi wearing a hat on a sunny day, standing in a park."
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="about__highlight__buttons">
+                            <button class="about__highlight__button">
+                                <span class="about__highlight__button-text"
+                                    >Get my resume</span
+                                >
+                            </button>
+                            <button class="about__highlight__button">
+                                <span class="about__highlight__button-text"
+                                    >Contact me on LinkedIn</span
+                                >
+                            </button>
+                        </div>
+                        <div class="about__highlight-dividing-line"></div>
+                        <div class="about__highlight__technologies article">
+                            <h3 class="about__highlight__technologies__title">
+                                My tech stack
+                            </h3>
+                            <p>
+                                Consectetur adipiscing elit. Maecenas euismod,
+                                velit ac consequat maximus, erat lacus tincidunt
+                                magna, et laoreet felis magna sed urna.
+                                Vestibulum sed vestibulum libero, bibendum
+                                accumsan nisi. Duis mattis felis vitae
+                                pellentesque ultricies. Phasellus elementum
+                                feugiat metus vel fermentum. Aenean vitae nisl
+                                vel metus tincidunt rutrum. Nunc egestas, quam
+                                vitae porttitor lacinia, nisi purus pharetra
+                                ipsum, cursus iaculis neque massa vel dolor.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="about__detail">
+                        <h3 class="about__detail__title">Damian Demasi</h3>
+                        <div
+                            class="about__detail__description-container article"
+                        >
+                            <p>
+                                Consectetur adipiscing elit. Maecenas euismod,
+                                velit ac consequat maximus, erat lacus tincidunt
+                                magna, et laoreet felis magna sed urna.
+                                Vestibulum sed vestibulum libero, bibendum
+                                accumsan nisi. Duis mattis felis vitae
+                                pellentesque ultricies. Phasellus elementum
+                                feugiat metus vel fermentum. Aenean vitae nisl
+                                vel metus tincidunt rutrum. Nunc egestas, quam
+                                vitae porttitor lacinia, nisi purus pharetra
+                                ipsum, cursus iaculis neque massa vel dolor.
+                                Aliquam erat volutpat. In sapien justo, vehicula
+                                at tortor a, maximus porta lorem. In hac
+                                habitasse platea dictumst. Donec mollis elit
+                                nulla, sed pulvinar purus eleifend vel. Maecenas
+                                iaculis nulla ac magna feugiat, et ultricies mi
+                                gravida.
+                            </p>
+                            <h4 class="about__detail__heading article">
+                                Consectetur adipiscing elit
+                            </h4>
+                            <p>
+                                Maecenas euismod, velit ac consequat maximus,
+                                erat lacus tincidunt magna, et laoreet felis
+                                magna sed urna. Vestibulum sed vestibulum
+                                libero, bibendum accumsan nisi. Duis mattis
+                                felis vitae pellentesque ultricies. Phasellus
+                                elementum feugiat metus vel fermentum. Aenean
+                                vitae nisl vel metus tincidunt rutrum. Nunc
+                                egestas, quam vitae porttitor lacinia, nisi
+                                purus pharetra ipsum, cursus iaculis neque massa
+                                vel dolor. Aliquam erat volutpat. In sapien
+                                justo, vehicula at tortor a, maximus porta
+                                lorem. In hac habitasse platea dictumst. Donec
+                                mollis elit nulla, sed pulvinar purus eleifend
+                                vel. Maecenas iaculis nulla ac magna feugiat, et
+                                ultricies mi gravida. Phasellus elementum
+                                feugiat metus vel fermentum. Aenean vitae nisl
+                                vel metus tincidunt rutrum. Nunc egestas, quam
+                                vitae porttitor lacinia, nisi purus pharetra
+                                ipsum, cursus iaculis neque massa vel dolor.
+                                Aliquam erat volutpat. Phasellus elementum
+                                feugiat metus vel fermentum.
+                            </p>
+                        </div>
+                    </section>
+                </article>
+            </div>
+        </section>
         <section class="contact">Contact</section>
         <footer class="footer">Footer</footer>
     </body>
