--- a/index.html
+++ b/index.html
@@ -632,6 +632,129 @@
                     </section>
                 </article>
             </div>
+            <div class="about__reviews__header">
+                <h2 class="about__reviews__header__title">
+                    What my coworkers have to say about me
+                </h2>
+            </div>
+            <div class="about__reviews__container">
+                <article class="card">
+                    <header class="card__header">
+                        <img
+                            src="./src/img/cesar-villagra.png"
+                            alt="Cesar Ariel Villagra profile photo"
+                            class="card__header__image"
+                        />
+                        <div class="card__header__details-container">
+                            <div class="card__header__name">
+                                César Ariel Villagra
+                            </div>
+                            <div class="card__header__job-title">
+                                Certified Scrum Master<br />Project Manager
+                                <br />Mobile Core Networks Expert Engineer
+                            </div>
+                        </div>
+                    </header>
+                    <div class="card__body">
+                        <p>
+                            “Damian is an excellent person to work with. His
+                            detailed knowledge of the business requirements
+                            makes him a very important resource. His
+                            professionalism & commitment are the keys for the
+                            successful delivery on time of the projects. He
+                            always has a keen eye on the 'day to day' details as
+                            well as the ability to differentiate immediate, near
+                            term and long term goals. His leadership skills
+                            makes working with him an enriching, challenging &
+                            enjoyable experience.”
+                        </p>
+                    </div>
+
+                    <button class="card__button">
+                        <span class="card__button-text"
+                            >Read it on LinkedIn</span
+                        >
+                    </button>
+                </article>
+                <article class="card">
+                    <header class="card__header">
+                        <img
+                            src="./src/img/exequiel-barrirero.png"
+                            alt="Exequiel Barrirero profile photo"
+                            class="card__header__image"
+                        />
+                        <div class="card__header__details-container">
+                            <div class="card__header__name">
+                                Exequiel Barrirero
+                            </div>
+                            <div class="card__header__job-title">
+                                Co-Founder<br />
+                                DevOps Cloud Engineer @ Binbash<br />
+                                AWS Certified Architect
+                            </div>
+                        </div>
+                    </header>
+                    <div class="card__body">
+                        <p>
+                            “After sharing several month at HP with Damian, I
+                            can say that he is a very enthusiast engineer, and
+                            has an amazing ability to learn new things by his
+                            own. He has an excellent technical background and
+                            was always willing to assist in any situation.
+                            Moreover, he was always adding value to our team,
+                            enforcing his co-workers with training and knowledge
+                            sharing. Hence, I don't hesitate to recommend him as
+                            employee, partner and person.”
+                        </p>
+                    </div>
+
+                    <button class="card__button">
+                        <span class="card__button-text"
+                            >Read it on LinkedIn</span
+                        >
+                    </button>
+                </article>
+                <article class="card">
+                    <header class="card__header">
+                        <img
+                            src="./src/img/adrian-dzienisik.png"
+                            alt="Adrian Dzienisik profile photo"
+                            class="card__header__image"
+                        />
+                        <div class="card__header__details-container">
+                            <div class="card__header__name">
+                                Adrián Dzienisik
+                            </div>
+                            <div class="card__header__job-title">
+                                Telecommunications Engineer <br />
+                                Business Analyst <br />
+                                SAFe 4 Certified
+                            </div>
+                        </div>
+                    </header>
+                    <div class="card__body">
+                        <p>
+                            “I had the pleasure to work with Damian at Claro for
+                            over 2 years, and I can say he is an excellent
+                            professional and a great person to work with. He
+                            consistently demonstrated a solid technical
+                            background, as well as excellent leadership and
+                            communication skills. He was a great mentor to me,
+                            and a committed team member, always adding value and
+                            sharing his knowledge of the business. In addition
+                            to this, his personality, positive attitude and
+                            dedication makes working with him a real enjoyable
+                            and valuable experience.”
+                        </p>
+                    </div>
+
+                    <button class="card__button">
+                        <span class="card__button-text"
+                            >Read it on LinkedIn</span
+                        >
+                    </button>
+                </article>
+            </div>
         </section>
         <section class="contact">Contact</section>
         <footer class="footer">Footer</footer>
