--- a/index.html
+++ b/index.html
@@ -704,7 +704,84 @@
                 </article>
             </div>
         </section>
-        <section class="contact">Contact</section>
-        <footer class="footer">Footer</footer>
+        <section class="section contact">
+            <div class="section__header">
+                <div class="section__header__text-container">
+                    <h2 class="section__header__text-container__text">
+                        Contact
+                    </h2>
+                </div>
+            </div>
+            <article class="section__body-container">
+                <section class="section__body__highlight">
+                    <div
+                        class="
+                            section__body__highlight__buttons-round-container-light
+                        "
+                    >
+                        <div
+                            class="
+                                section__body__highlight__buttons-round-container-dark
+                            "
+                        >
+                            <button class="button-light">
+                                <span class="button-light__text"
+                                    >work@damiandemasi.com</span
+                                >
+                            </button>
+                            <button class="button-light">
+                                <span class="button-light__text">LinkedIn</span>
+                            </button>
+                        </div>
+                    </div>
+                </section>
+                <section class="section__body__description">
+                    <h3 class="article__title--dark">Let's get in touch!</h3>
+                    <div class="article--dark">
+                        <p class="big-icon">📢</p>
+                        <p>
+                            You can shoot me an email, send me a message on
+                            LinkedIn, or, if you prefer, use the contact form
+                            below.
+                        </p>
+                        <form action="#" method="get" id="message-form">
+                            <input
+                                class="form__input"
+                                type="text"
+                                id="name"
+                                name="name"
+                                placeholder="Your name"
+                            />
+                            <input
+                                class="form__input"
+                                type="email"
+                                id="email"
+                                name="email"
+                                placeholder="Your email"
+                            />
+                            <textarea
+                                class="form__textarea"
+                                id="message"
+                                name="message"
+                                rows="10"
+                                cols="50"
+                                placeholder="Your message"
+                            ></textarea>
+                            <button
+                                class="section__body__button"
+                                type="submit"
+                                form="message-form"
+                                value="Submit"
+                            >
+                                <span class="section__body__button__text"
+                                    >Send message</span
+                                >
+                            </button>
+                        </form>
+                    </div>
+                </section>
+            </article>
+        </section>
+        <footer class="footer">-------------- Footer -----------------</footer>
     </body>
 </html>
