--- a/index.html
+++ b/index.html
@@ -782,6 +782,31 @@
                 </section>
             </article>
         </section>
-        <footer class="footer">-------------- Footer -----------------</footer>
+        <footer class="footer">
+            <div class="footer__background">
+                <div class="footer__background-text">Footer</div>
+                <div class="footer__content__container">
+                    <nav class="footer__content__nav">
+                        <div class="footer__content__nav__link">Projects</div>
+                        <div class="footer__content__nav__link">Blog Posts</div>
+                        <div class="footer__content__nav__link">About</div>
+                        <div class="footer__content__nav__link">Contact</div>
+                    </nav>
+                    <div class="footer__content__contact">
+                        <div class="footer__content__signature">
+                            Designed and coded by
+                            <span class="footer__content__signature__highlight"
+                                >Damian Demasi</span
+                            >
+                        </div>
+                        <div class="footer__content__logos-container">
+                            <div class="footer__content__logo">LinkedIn</div>
+                            <div class="footer__content__logo">GitHub</div>
+                            <div class="footer__content__logo">Twitter</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
