Buttons and links styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
                         <div class="hero__nav__logo">Twitter</div>
                     </div>
                     <div class="hero__nav__links-container">
-                        <div class="hero__nav__link">Projects</div>
-                        <div class="hero__nav__link">Blog Posts</div>
-                        <div class="hero__nav__link">About</div>
-                        <div class="hero__nav__link">Contact</div>
+                        <div>
+                            <a href="#projects" class="hero__nav__link"
+                                >Projects</a
+                            >
+                        </div>
+                        <div>
+                            <a href="#blog-posts" class="hero__nav__link"
+                                >Blog Posts</a
+                            >
+                        </div>
+                        <div>
+                            <a href="#about" class="hero__nav__link">About</a>
+                        </div>
+                        <div>
+                            <a href="#contact" class="hero__nav__link"
+                                >Contact</a
+                            >
+                        </div>
                     </div>
                 </nav>
                 <header class="hero__header">
@@ -107,7 +121,7 @@
                 </article>
             </section>
         </section>
-        <section class="section projects">
+        <section class="section projects" id="projects">
             <div class="section__header">
                 <div class="section__header__text-container">
                     <h2 class="section__header__text-container__text">
@@ -281,7 +295,7 @@
                 </div>
             </article>
         </section>
-        <section class="section blog-posts">
+        <section class="section blog-posts" id="blog-posts">
             <div class="section__header">
                 <div class="section__header__text-container">
                     <h2 class="section__header__text-container__text">
@@ -474,7 +488,7 @@
                 </article>
             </div>
         </section>
-        <section class="section about">
+        <section class="section about" id="about">
             <div class="section__header">
                 <div class="section__header__text-container">
                     <h2 class="section__header__text-container__text">About</h2>
@@ -704,7 +718,7 @@
                 </article>
             </div>
         </section>
-        <section class="section contact">
+        <section class="section contact" id="contact">
             <div class="section__header">
                 <div class="section__header__text-container">
                     <h2 class="section__header__text-container__text">
